# alfa

./: sample_submission.csv
rag_hackathon/: README.md  pyproject.toml  requirements.txt
rag_hackathon/runs/full_eval/: raw_top5.parquet  sample_qrels.csv  submit.csv  websites_sample200.csv
rag_hackathon/runs/full_eval/artifacts/: chunks.index  chunks_embeddings.npy  chunks_mapping.json  chunks_meta.parquet  websites_processed.parquet
rag_hackathon/scripts/: build_index.py  evaluate_hit5.py  make_submission.py  retrieve_top5.py
rag_hackathon/src/rag_hack/: __init__.py  chunker.py  config.py  data.py  embedder.py  eval_hitk.py  indexer.py  pipeline.py  preprocess.py  rerank.py  retrieve.py
rag_hackathon/submit/: raw_top5.parquet  submit.csv  view.ipynb
rag_hackathon/tests/: conftest.py  test_chunk_embed.py  test_index_retrieve.py  test_io.py  test_submission_format.py
